cabal-version:      2.4
name:               mokuro-tui
version:            0.1.0.0
synopsis:           TUI for Mokuro

-- A longer description of the package.
-- description:
homepage:           github.com/fsestini/mokuro-tui

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             Filippo Sestini
maintainer:         sestini.filippo@gmail.com

-- A copyright notice.
-- copyright:
category:           Language
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Mokuro.TUI
                    , Mokuro.TUI.Utils
                    , Mokuro.TUI.Types
                    , Mokuro.TUI.Options

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0
                    , brick
                    , text
                    , microlens
                    , microlens-mtl
                    , shelly
                    , filepath
                    , containers
                    , vty
                    , vector
                    , extra
                    , transformers
                    , unix
    hs-source-dirs:   src
    default-language: Haskell2010

executable mokuro-tui
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.16.4.0,
        mokuro-tui

    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:
        -threaded
